adding the Tableau dashboard

--- a/resources/dashboards/index.html
+++ b/resources/dashboards/index.html
@@ -138,6 +138,42 @@
         </div>
       </div>
     </section>
+
+    <section class="au-body">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-12">
+            <h2>Tableau</h2>
+            <p>
+              Tableau Software is an interactive data visualization software company founded in January 2003.
+            </p>
+            <div class='tableauPlaceholder' id='viz1595306337289' style='position: relative'>
+              <noscript>
+                <a href='#'>
+                  <img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;hw&#47;hwd-data&#47;AustralianHealthWorkforceData&#47;1_rss.png' style='border: none' />
+                </a>
+              </noscript>
+              <object class='tableauViz' style='display:none;'>
+                <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                <param name='embed_code_version' value='3' />
+                <param name='site_root' value='' />
+                <param name='name' value='hwd-data&#47;AustralianHealthWorkforceData' />
+                <param name='tabs' value='no' />
+                <param name='toolbar' value='yes' />
+                <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;hw&#47;hwd-data&#47;AustralianHealthWorkforceData&#47;1.png' />
+                <param name='animate_transition' value='yes' />
+                <param name='display_static_image' value='yes' />
+                <param name='display_spinner' value='yes' />
+                <param name='display_overlay' value='yes' />
+                <param name='display_count' value='yes' />
+                <param name='language' value='en' />
+                <param name='filter' value='publish=yes' />
+              </object>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!--END CONTENT-->
   </main>
   <!-- END MAIN BODY -->
@@ -203,6 +239,22 @@
   <!-- The javascript from pancake to open and close side nav on desktop -->
   <script type="text/javascript" src="../../js/script.min.js"></script>
   <script type="text/javascript" src="../../js/back-to-top.js"></script>
+  <script type='text/javascript'>
+    var divElement = document.getElementById('viz1595306337289');
+    var vizElement = divElement.getElementsByTagName('object')[0];
+    if (divElement.offsetWidth > 800) {
+      vizElement.style.width = '1000px'; vizElement.style.height = '827px';
+    }
+    else if (divElement.offsetWidth > 500) {
+      vizElement.style.width = '1000px'; vizElement.style.height = '827px';
+    }
+    else {
+      vizElement.style.width = '100%'; vizElement.style.height = '1477px';
+    }
+    var scriptElement = document.createElement('script');
+    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+    vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+  </script>
 
 </body>
 
